--- a/backend/task-manager-server/package.json
+++ b/backend/task-manager-server/package.json
@@ -3,12 +3,13 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Partha Pratim Mallcik",
   "license": "ISC",
-  "description": "",
+  "description": "Backend server for Task Manager App",
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
