--- a/frontend/task_manager_app/pubspec.yaml
+++ b/frontend/task_manager_app/pubspec.yaml
@@ -21,12 +21,12 @@ dependencies:
   cupertino_icons: ^1.0.6
   lottie: ^2.7.0
   flutter_launcher_icons: ^0.13.1
+  flutter_native_splash: ^2.3.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
-  launcher_name: ^1.0.2
 
 flutter:
   uses-material-design: true
@@ -43,9 +43,17 @@ flutter:
           weight: 700
   assets:
     - assets/animations/success.json
+    - assets/animations/login_loading.json
+    - assets/app_logo.png
 
 
 flutter_icons:
   android: true
   ios: true
   image_path: "assets/icon/app_icon.png"  # Path to your icon image
+
+flutter_native_splash:
+  color: "#ffffff"
+  image: assets/splash_image.png
+  android: true
+  ios: true
