backend live and frontend routing issue solved

--- a/backend/task-manager-server/.env
+++ b/backend/task-manager-server/.env
@@ -1,3 +1,3 @@
 MONGO_URI=mongodb+srv://parthamallickcs:FmaHqoDIVYrtEZlv@cluster0.4tbosiq.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-JWT_SECRET=superSecretKeyForTaskManagerApp2025!  # A strong and unique secret key
-JWT_EXPIRES_IN=1h  # Token expiration set to 1 hour
+JWT_SECRET=superSecretKeyForTaskManagerApp2025!
+JWT_EXPIRES_IN=1h
