new feature app update successfully added

--- a/frontend/task_manager_app/pubspec.yaml
+++ b/frontend/task_manager_app/pubspec.yaml
@@ -2,7 +2,7 @@ name: task_manager_app
 description: "A new Flutter project."
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.0+1
+version: 1.1.0+1
 
 environment:
   sdk: '>=3.3.1 <4.0.0' # Updated Dart SDK version compatible with Flutter 3.19.3
@@ -22,6 +22,11 @@ dependencies:
   lottie: ^2.7.0
   flutter_launcher_icons: ^0.13.1
   flutter_native_splash: ^2.3.2
+  package_info_plus: ^8.0.0
+  url_launcher: ^6.1.7
+  open_file: ^3.2.1
+  install_plugin: ^2.0.1
+  permission_handler: ^10.0.0
 
 dev_dependencies:
   flutter_test:
