--- a/frontend/task_manager_app/android/app/build.gradle
+++ b/frontend/task_manager_app/android/app/build.gradle
@@ -48,6 +48,8 @@ android {
     buildTypes {
         release {
             signingConfig signingConfigs.debug
+            shrinkResources false
+            minifyEnabled false
         }
     }
 }
